--- a/index.html
+++ b/index.html
@@ -1,13 +1,89 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-  <title>DevProject</title>
+  <title>Tortoiseshell Optics</title>
   <link href="./res/css/reset.css" type="text/css" rel="stylesheet">
   <link href="./res/css/index.css" type="text/css" rel="stylesheet">
-  
+
 </head>
+
 <body>
 
+  <div class="banner">
+    <div class="container">
+      <header>
+        <div class="logo">
+          <img src="./res/img/logo-white.png" />
+          <span>Tortoiseshell Optics</span>
+        </div>
+
+        <nav>
+          <span>
+            <a href="#">Services</a>
+          </span>
+          <span>
+            <a href="#">Products</a>
+          </span>
+          <span>
+            <a href="#">Contact</a>
+          </span>
+        </nav>
+      </header>
+
+      <div class="flex">
+        <div class="box">
+          <p>don't just look, see.</p>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+
+  <main>
+    <div class="container">
+      <div class="flex">
+        <div class="features flex">
+          <div class="feature papericon">
+            <img src="./res/img/paper-icon.png" />
+            <p>Comprehensive Exams</p>
+          </div>
+          <div class="feature">
+            <img src="./res/img/ruler-icon.png" />
+            <p>Custom fittings</p>
+          </div>
+          <div class="feature">
+            <img src="./res/img/truck-icon.png" />
+            <p>Fast Delivery</p>
+          </div>
+        </div>
+
+        <div class="stickers flex">
+          <div class="sticker">
+            <div class="title">PHILOSOPHY</div>
+            <p>Over 75% of our brains are dedicated to one sense: vision. We believe everyone deserves to see the world, not
+              matter what. That’s why we offer eye exams, custom fittings, and quick delivery at a low cost. It’s your vision
+              that makes ours. </p>
+          </div>
+          <div class="sticker">
+            <div class="title">APPOINTMENTS</div>
+            <p>Schedule an appointment by calling us at (312) 654-0987. We’re open Tuesday - Saturday, 9AM - 6PM. </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </main>
+
+
+
+  <div class="container">
+    <footer>
+      <img src="./res/img/logo-black.png" />
+      <span>Copyright Tortoiseshell Optics</span>
+    </footer>
+  </div>
 
 </body>
+
 </html>
