mobile done. all done

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
           <span>
             <a href="#">Contact</a>
           </span>
+          <span class="menu-btn">
+              <a href="#">Menu</a>
+            </span>
         </nav>
       </header>
 
